<resources>
    <string name="app_name">KTBM</string>

    <string name="title">Kombucha Brewmaster</string>
    <string name="action_settings">Settings</string>
    <string name="step1_title"> Step 1 out of 3</string>
    <string name="step1_subtitle"> Ingredients and Tools</string>
    <string name="tools">Tools</string>
    <string name="ingredients">Ingredients</string>
    <string name="step1_tools">
        \u2022 1.5 qt pot\n\u2022 large tea infuser (3in)\n\u2022 ladle spoon\n\u2022 clean food scissors\n\u2022 2G glass or ceramic dispenser\n\u2022 mesh cloth or t-shirt\n\u2022 rubber band or lid\n\u2022 thermometer\n\u2022 jar with lid (for SCOBY hotel)\n\u2022 distilled vinegar\n
    </string>
    <string name="step1_ingredients">
        \u2022 black tea \n\u2022 raw cane sugar \n\u2022 spring water \n\u2022 active Kombucha \n\u2022 Kombucha mushroom culture \n
    </string>
    <string name="pre_brew">Step 2 out of 3</string>
    <string name="step2_title">Pre-Brew</string>
    <string name="step2_subtitle">Pre-Brew</string>
    <string name="step2_steps">
        1) rinse out Kombucha vessel and pot with distilled vinegar\n2) boil water in pot \n3) add tea and turn off heat\n4) add raw cane sugar, stir until dissolved\n5) let steep until cool with lid on\n6) strain tea into bowl\n7) add active Kombucha liquid [add full 16 oz of kombucha if you do not have a mushroom culture already, leave ½ inch at top of the jar for culture to grow]\n8) place in gallon ceramic/glass jar\n9) add the mother mushroom w/ opaque side up\n10) cover with a mesh cloth, other cloth, or loose lid\n11) store on a countertop or in a cupboard space that is no warmer than 77º [the cooler the temperature the longer it takes to culture]\n
    </string>
    <string name="brew">Step 3 out of 3</string>
    <string name="step3_subtitle">Brew</string>
    <string name="step3_steps">
        1) estimate 5-10 days [sometimes it takes 14 days]\n2) taste: too sweet = it has not completely fermented \n    too vinegary or sour = it has gone too long \n3) bottle separately and let sit @ room temperature for 2 days, then refrigerate
    </string>
    <string name="calendar_reminder">CALENDAR REMINDER</string>
    <string name="primary_fermentation">PRIMARY FERMENTATION</string>

    <!-- Primary Fermentation Table-->
    <string name="water">water</string>
    <string name="tea">tea</string>
    <string name="raw_cane_sugar">raw sugar</string>
    <string name="kombucha">KT</string>
    <string name="mother_scoby">SCOBY</string>
    <string name="lid">lid</string>
    <string name="tweleve_cups">12cups</string>
    <string name="nine_tsps">9tsps</string>
    <string name="three_fourth_cups">3/4cup</string>
    <string name="one_and_half_cups_kombucha">10/90\nKT/tea</string>
    <string name="first_note">(1)</string>
    <string name="one_opaque">1 </string>
    <string name="second_note">(2)</string>
    <string name="cloth">cloth</string>
    <string name="twenty_four_cups">24cups</string>
    <string name="eighteen_tsps">18tsps</string>
    <string name="one_and_half_cups">1.5cups</string>
    <string name="quotes">"''"</string>
    <string name="signs_of_readiness">signs of readiness:\n\u2022cloudy at the top\n\u2022darker  brown to lighter tan liquid</string>
    <string name="first_annotation">prevents mold</string>
    <string name="second_annotation">opaque side up</string>

    <!-- Secondary Fermentation Table-->
    <string name="secondary_fermentation">SECONDARY FERMENTATION</string>
    <string name="flavor">flavor</string>
    <string name="lifetime">lifetime</string>
    <string name="flavors">ginger|mango|pomegranate|etc.</string>
    <string name="closed">closed</string>
    <string name="six_months">6 months</string>

    <!-- Scoby Hotel Fermentation Table-->
    <string name="scoby_hotel">SCOBY Hotel</string>
    <string name="steps">Steps</string>
    <string name="maintenance">Maintenance</string>
    <string name="steps_content">Scoop out and gar scoby\nfilling with tea</string>
    <string name="maintenance_content">2 - 6 months\n1)reducing yeast (brown strands)\n2)trimming scoby</string>

    <string name="madeBy">an AH production</string>
    <string name="disclaimer">disclaimer: your KT will most likely turn out great,\n however this app is not liable for any bad KT created</string>
</resources>





