<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/display_1"
            android:layout_weight="0"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/step1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/container">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <CheckBox
                    android:id="@+id/step1_checkbox"
                    android:text="@string/step1_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="step1_ingredients_and_tools"
                    style="@style/headline"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step1_subtitle"
                    style="@style/title"/>
            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/materials_75"
                style="@style/image"
                />
        </LinearLayout>

        <LinearLayout
        android:id="@+id/step1_content"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/content_container">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/step1_tools">
            <TextView
                android:text="@string/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                style="@style/subhead"/>
            <TextView
                android:text="@string/step1_tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                style="@style/body"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/step1_ingredients">
            <TextView
                android:text="@string/ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                style="@style/subhead"/>
            <TextView
                android:text="@string/step1_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/body"/>
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/step2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/container">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <CheckBox
                    android:id="@+id/step2_checkbox"
                    android:text="@string/pre_brew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="step2_pre_brew"
                    style="@style/headline"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step2_subtitle"
                    style="@style/title"/>
            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pre_brew_75"
                style="@style/image"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/step2_content"
            style="@style/content_container">
            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableRow>
                    <TextView
                        android:text="R1C1"
                        android:padding="3dp" />
                    <TextView
                        android:text="R1C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R1C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R2C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R1C1"
                        android:padding="3dp" />
                    <TextView
                        android:text="R1C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R1C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R2C2"
                        android:padding="3dp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="R2C1"
                        android:padding="3dp" />
                    <TextView
                        android:text="R2C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R1C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R1C1"
                        android:padding="3dp" />
                    <TextView
                        android:text="R1C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R1C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R2C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R2C2"
                        android:padding="3dp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="R2C1"
                        android:padding="3dp" />
                    <TextView
                        android:text="R2C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R1C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R1C1"
                        android:padding="3dp" />
                    <TextView
                        android:text="R1C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R1C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R2C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R2C2"
                        android:padding="3dp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="R2C1"
                        android:padding="3dp" />
                    <TextView
                        android:text="R2C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R2C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R1C1"
                        android:padding="3dp" />
                    <TextView
                        android:text="R1C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R1C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R2C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R2C2"
                        android:padding="3dp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="R2C1"
                        android:padding="3dp" />
                    <TextView
                        android:text="R2C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R2C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R1C1"
                        android:padding="3dp" />
                    <TextView
                        android:text="R1C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R1C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R2C2"
                        android:padding="3dp" />
                    <TextView
                        android:text="R2C2"
                        android:padding="3dp" />
                    <!--ON TABLELAYOUT LEVEL: android:stretchColumns="0"-->
                    <!-- android:gravity="right"-->
                    <!--android:layout_span="2"-->
                </TableRow>
            </TableLayout>
            <TextView
                android:text="@string/step2_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/body"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/step3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/container">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <CheckBox
                    android:id="@+id/step3_checkbox"
                    android:text="@string/brew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="step3_brew"
                    style="@style/headline"/>
                <TextView                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step3_subtitle"
                    style="@style/title"/>
            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/brew_75"
                style="@style/image"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/content_container"
            android:id="@+id/step3_content">
            <TextView
                android:text="@string/step3_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/body"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/calendar_reminder"
            android:drawableLeft="@drawable/target_64"
            android:onClick="setCalReminder"
            style="@style/calendarButton"
            android:layout_weight="0"/>
        <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
</LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            <TextView
                android:text="Enjoy boosts in energy and saving $$$"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/energy_40"
                android:layout_weight="0"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/money_40"
                android:layout_weight="0"/>
            <View
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
</ScrollView>